Bug 449874 - Crash : unknown code error : 418 265 088
Summary: Crash : unknown code error : 418 265 088
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: webenginepart (other bugs)
Version First Reported In: 21.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-09 16:57 UTC by nk0885
Modified: 2022-03-10 15:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (240.64 KB, image/png)
2022-02-09 16:57 UTC, nk0885
Details
Screen shot (471.78 KB, image/png)
2022-02-12 16:12 UTC, nk0885
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nk0885 2022-02-09 16:57:01 UTC
Created attachment 146496 [details]
Screenshot

SUMMARY
***
Konqueror crash for unknown error
***


STEPS TO REPRODUCE
1. as my Konqueror 20.12.0 was always freezing, i changed some parameters in order to solve it . But no luck now it crashes with message : Impossible de mener à bien l'opération demandée
Problème non documenté
Détails de la requête :
Adresse :
Date et heure : mercredi 9 février 2022 17:19:06 CET
Informations complémentaires :
Description :
Code d'erreur 418 265 088 inconnu Veuillez envoyer un rapport de bogue détaillé à https://bugs.kde.org.
2. The changes are : have put a web page as starting page. Note : if using khtml insted Webengine , the same
3. If i now  put a  blank address for starting page : have the same crash

OBSERVED RESULT
Crash
If I start with Konsole  there is that message :
"kf.xmlgui: Shortcut for action  "walletFillFormsNow" "Remplir les &formulaires maintenant" set with QAction::setShortcut()! Use KActionCollection::setDefaultShortcut(s) instead." then blank and Konqueror crash with the message of unknown error
I do not understand


EXPECTED RESULT
Konqueror working


SOFTWARE/OS VERSIONS
Operating System: Mageia 8
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.76.0
Qt Version: 5.15.2
Kernel Version: 5.15.18-desktop-2.mga8
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-6440HQ CPU @ 2.60GHz
Memory: 15.5 Gio of RAM
Graphics Processor: Mesa Intel® HD Graphics 530

ADDITIONAL INFORMATION
Comment 1 Stefano Crocco 2022-02-09 18:31:49 UTC
What do you exactly mean by "it crashes"? Does Konqueror suddenly closes (maybe launching the DrKonqui window)? I ask because I tried to reproduce your bug and what I get is not a crash: Konqueror opens but displays a page with the error message you mentioned.

If that's what you experience, I think that the cause is not the "page d'accueil" setting, but rather the fact that you chose a custom starting page in the box above ("afficher ma page de démarrage") but didn't specify any starting page in the space at the right of the box. If you try writing there the address of the page you want Konqueror to open at start, your problem should disappear.
Comment 2 nk0885 2022-02-10 17:01:19 UTC
You are right : konqueror shows a new page with the error message and after does nothing.

For 10 years I used Konqueror as file manager and web browser.
Today I wanted to re use Konqueror. For the file management , no problem. For the web browser service : nothing. For instance if I put in the box above at the right the address https://www.teatroallascala.org/en/index.html  nothing happens. If in that upper case I put "plasma" nothing happens. It is like the program is frozen.
That's why I changed the default address of the "page d'acceuil" who is https://www.kde.org/ in https://www.qwant.com

Now I have put back the default address : Https://www.kde.org
If I  start Konqueror in this case  with te Konsole I have the same message :
kf.xmlgui: Shortcut for action  "walletFillFormsNow" "Remplir les &formulaires maintenant" set with QAction::setShortcut()! Use KAction
Collection::setDefaultShortcut(s) instead.

If then I put in the upper right case " https://www.teatroallascala.org/en/index.html " then I have the message :
org.kde.konqueror.searchbar: Failed to filter using web shortcut: ""

What changes Have I to do ?

Notice : Firefox and the other are working well.
Comment 3 Stefano Crocco 2022-02-11 19:22:15 UTC
You don't need to worry about the message in the terminal, as it's not related to this issue.

Regarding your problem, I don't understand exactly what you mean by "upper right case". Would you mind to post a screenshot of what your Konqueror window looks like?

For the time being, the only suggestion I can give you is to rename your ~/.config/konquerorrc file and launch Konqueror again, so that it'll pick up the default values of every option. In theory, this should make it work correctly. If it doesn't, you could try creating a new user and check whether with a completely default configuration Konqueror starts working correctly.
Comment 4 nk0885 2022-02-12 16:12:58 UTC
Created attachment 146630 [details]
Screen shot

Here with
Comment 5 Stefano Crocco 2022-02-13 09:03:52 UTC
Thanks, now I understand. I just realized that, for unknown reasons, the search bar isn't showing anymore in recent Konqueror versions. As I never used it, It didn't even notice.

Does Konqueror work if you enter the address on the bar on the left, instead? Have you tried renaming the konquerorrc file and/or trying a new user?
Comment 6 Stefano Crocco 2022-02-13 20:44:31 UTC
I found out why the search bar wasn't visible anymore and fixed that. Now I'm experiencing a behavior similar to what you described: entering text in the search bar and pressing return very often does nothing; however sometimes it works as expected. I'm trying to find out why this happens.
Comment 7 nk0885 2022-02-13 22:50:23 UTC
Puting a web address in the left search bar is working very well !!
A : With  Konqueror configuration/general /default "page d'acceuil " = https://www.kde.org/ and WebEngin 

Details Starting with Konsole :
Step 1)Konqueror :
message : kf.xmlgui: Shortcut for action  "walletFillFormsNow" "Remplir les &formulaires maintenant" set with QAction::setShortcut()! Use KAction
Collection::setDefaultShortcut(s) instead.
Step 2)  https://www.teatroallascala.org/en/index.html  

message : 
js: Synchronous XMLHttpRequest on the main thread is deprecated because of its detrimental effects to the end user's experience. For mo
re help, check https://xhr.spec.whatwg.org/. 
libpng warning: iCCP: known incorrect sRGB profile 
libpng warning: iCCP: known incorrect sRGB profile 
libpng warning: iCCP: known incorrect sRGB profile 
libpng warning: iCCP: known incorrect sRGB profile

The Web page of the Scala is well opened.

B : With  Konqueror configuration/general /default "page d'acceuil " = https://www.kde.org/ and  Khtml

Strickly the same as in A

C :  With  Konqueror configuration/general /default "page d'acceuil " = https://www.qwant.com/ and WebEngin

The "Page d'acceuil" did not change 
Step 1)Konqueror :
message : kf.xmlgui: Shortcut for action  "walletFillFormsNow" "Remplir les &formulaires maintenant" set with QAction::setShortcut()! Use KAction
Collection::setDefaultShortcut(s) instead.
Step 2)  https://www.teatroallascala.org/en/index.html  

message : 
js: Synchronous XMLHttpRequest on the main thread is deprecated because of its detrimental effects to the end user's experience. For mo
re help, check https://xhr.spec.whatwg.org/. 
libpng warning: iCCP: known incorrect sRGB profile 
libpng warning: iCCP: known incorrect sRGB profile 
libpng warning: iCCP: known incorrect sRGB profile 
libpng warning: iCCP: known incorrect sRGB profile

The Web page of the Scala is opened.

Well for me it is operating but now we could have much questions :
A- What is the need of  the right upper bar ?
B - What is the need to be able to change the "page d'acceuil" in the general configuration for no result?
C - What is the sens of the messages read in the Konsole  if all is operating ?

Globally probably a great simplification could be done.
Thanks Stefano for your help
Comment 8 Stefano Crocco 2022-02-14 20:44:20 UTC
I guess (the code has been written long before I started maintaining Konqueror) that the Search Bar (upper right bar) allows a better interaction with search engines. As I said, I never used it, so I can't say in details what it provides, but a quick look at the code shows that, for example, it should provide suggestions (they don't seem to work at the time, though).

Regarding the "page d'acceuil" or "Home page", I guess it only changes the behavior of the "Home" button. I was surprised, too, when I started investigating your bug report. I thought that the "Home page" would be the same as the "Start page", but it seems it isn't. I'm not sure, but I guess that the idea was to allow the user to have a custom starting page which was different from the "Home page" you go to with the "Home" button. If that's the idea, I'm not sure I agree with its usefulness; I am sure, however, that part of the configuration dialog is very confusing and needs to be improved.

The messages on the terminal are for developers. For example the one about "Shortcut for action walletFillFormsNow" told me that the way I had set a keyboard shortcut wasn't appropriate. As I said, it has been fixed in a more recent version of Konqueror. The other messages you posted aren't from Konqueror itself but from libraries it uses (in particular, QtWebEngine) and I don't really know what they mean (expecially because there's no way to know where they come from).
Comment 9 Bug Janitor Service 2022-03-06 18:34:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konqueror/-/merge_requests/114
Comment 10 nk0885 2022-03-06 21:14:55 UTC
Thanks
For me it is clear
Comment 11 Stefano Crocco 2022-03-10 15:38:24 UTC
Git commit 81d4f7c5a195f6711e7e4fd2009a336942a35e49 by Stefano Crocco.
Committed on 06/03/2022 at 18:19.
Pushed by stefanocrocco into branch 'master'.

Make it clearer where the user should enter the custom start page

When the user chooses to use a custom start page, he may not realize
where he's supposed to enter it and may think that it's the "Home page"
widget (also because most browsers don't allow to customize the home
page and the starting page separately).

To improve this situation, given that adding a label to the widget would
take too much space, the following changes have been implemented:
- only display the custom start page widget when the user actually
  chooses to use a custom start page
- add a message widget warning the user if he leaves the widget empty.

M  +25   -6    settings/konqhtml/generalopts.cpp
M  +3    -0    settings/konqhtml/generalopts.h

https://invent.kde.org/network/konqueror/commit/81d4f7c5a195f6711e7e4fd2009a336942a35e49