Make it clearer where the user should enter the custom start page

When the user chooses to use a custom start page, he may not realize
where he's supposed to enter it and may think that it's the "Home page"
widget (also because most browsers don't allow to customize the home
page and the starting page separately).

To improve this situation, given that adding a label to the widget would
take too much space, the following changes have been implemented:
- only display the custom start page widget when the user actually
  chooses to use a custom start page
- add a message widget warning the user if he leaves the widget empty.

BUG: 449874